# kami-markdown-viewer

./: .gitignore  AGENTS.md  CHANGELOG.md  OPTIMIZATION_HANDOFF.md  README.md  TODO.md  check_token.ps1  index.html  package-lock.json  package.json  preview-notify.html  preview-toast.html  preview.html  reload-note-preview.html  scrollbar-preview.html  sidebar-preview.html  topbar-preview.html  tsconfig.json  vite.config.ts
.agents/skills/gc-minimal-zine-poster/: .gitignore  LICENSE  README.md  SKILL.md
docs/superpowers/plans/: 2026-07-11-outline-polish-code-copy.md  2026-07-17-sidebar-redesign.md
docs/superpowers/specs/: 2026-07-11-outline-polish-code-copy-design.md  2026-07-17-sidebar-redesign-design.md
outputs/: hit-poster-prompt.txt
samples/: sample.md
samples/assets/: README.md
src/: App.test.tsx  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: association.rs  document.rs  document_tests.rs  lib.rs  main.rs  watcher.rs
src/components/: CodeBlock.test.tsx  CodeBlock.tsx  CustomScrollbar.test.tsx  CustomScrollbar.tsx  EmptyState.tsx  ErrorState.tsx  MarkdownDocument.test.tsx  MarkdownDocument.tsx  MarkdownImage.test.tsx  MarkdownImage.tsx  OutlinePanel.test.tsx  OutlinePanel.tsx  OutlineToggle.test.tsx  OutlineToggle.tsx  ReloadToast.tsx  TopBar.test.tsx  TopBar.tsx
src/hooks/: useIsNarrow.test.ts  useIsNarrow.ts  useOutlineOpen.test.ts  useOutlineOpen.ts  useOutlineSync.test.ts  useOutlineSync.ts
src/lib/: lastOpened.ts  outline.test.ts  outline.ts  path.test.ts  path.ts  scrollMemory.ts  settings.ts
src/styles/: kami.css  kami.css.test.ts
src/test/: setup.ts
