[package]
name = "vellum"
version = "1.0.0"
description = "Vellum · 素笺 - an elegant Markdown viewer for Windows"
authors = ["Vellum · 素笺"]
edition = "2021"

[lib]
name = "vellum_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
dunce = "1"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
urlencoding = "2"

[profile.release]
lto = true
codegen-units = 1
