[package]
name = "vellum"
version = "1.2.0"
description = "Vellum · 素笺 - an elegant Markdown viewer for Windows"
authors = ["Vellum · 素笺"]
edition = "2021"

[lib]
name = "vellum_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
dunce = "1"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "=2.4.3"
tauri-plugin-store = "2"
urlencoding = "2"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_DataExchange",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
# 发布配置：运行性能/体积优先，编译时间较长。
# 日常快速迭代打包可临时改为：lto = "thin"、codegen-units = 16、incremental = true
lto = true
codegen-units = 1
